# BevyGoodGame

./: Cargo.toml
assets/ldtk/: sandbox.ldtk
src/: main.rs
src/core/: components.rs  mod.rs  systems.rs
src/game_core/: attack.rs  camera.rs  mod.rs  player.rs  world.rs
src/game_core/entities/: enemy.rs  entity_components.rs  mod.rs  player.rs
